major code refactoring
Most significant changes are:
  - Each device can now have multiple HID devices
  - Tests now run in a independently from the server
  - Dropped raw_event
